Changelog
=========

5.1 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Fix: Prevent choosers from failing when initial value is an unrecognised ID, e.g. when moving a page from a location where `parent_page_types` would disallow it (Dan Braghis)
 * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
 * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
 * Maintenance: Switch to ruff for flake8 / isort code checking (Oliver Parker)


5.0 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Added support for Django 4.2
 * Object usage information on deleting objects (Sage Abdullah)
 * Support for SVG images (Joshua Munn)
 * Custom validation support for StreamField (Matt Westcott)
 * Add `WAGTAILIMAGES_EXTENSIONS` setting to restrict image uploads to specific file types (Aman Pandey, Ananjan-R)
 * Update user list column level to `Access level` to be easier to understand (Vallabh Tiwari)
 * Migrate `.button-longrunning` behaviour to a Stimulus controller with support for custom label element & duration (Loveth Omokaro)
 * Implement new simplified userbar designs (Albina Starykova)
 * Add more Axe rules to the accessibility checker (Albina Starykova)
 * Sort accessibility checker results by position on the page (Albina Starykova)
 * Highlight elements with errors in accessibility checker (Albina Starykova)
 * Add usage view for pages (Sage Abdullah)
 * Copy page form now updates the slug field dynamically with a slugified value on blur (Loveth Omokaro)
 * Ensure selected collection is kept when navigating from documents or images listings to add multiple views & upon upload (Aman Pandey, Bojan Mihelac)
 * Keep applied filters when downloading form submissions (Suyash Srivastava)
 * Messages added dynamically via JavaScript now have an icon to be consistent with those supplied in the page's HTML (Aman Pandey)