@@ -15,7 +15,7 @@ depth: 1
 
 ### Other features
 
- * ...
+ * Mark calls to `md5` as not being used for secure purposes, to avoid flagging on FIPS-mode systems (Sean Kelly)
 
 ### Bug fixes
 
